--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -12,5 +12,5 @@ platforms:
 suites:
   - name: default
     run_list:
-      - recipe[zip_build::default]
+      - recipe[zip_app::default]
     attributes:
